# projet_ouverture_2025

./: .gitignore  Makefile  README.md  dune-project
.github/workflows/: makefile.yml  ocaml.yml
data/: experiments.csv  test_hauteur.py  test_largeur.py  test_profondeur.py  test_tailles_fils.py  test_temps.py
graphs/: sample_abrn1000.dot  sample_remy_lineaire_n10.dot  sample_remy_lineaire_n1000.dot  sample_remy_lineaire_n10000.dot
src/: abr.ml  dot.ml  dune  experiments.ml  main.ml  metrics.ml  remy_lineaire.ml  remy_naive.ml  types.ml
tests/: dune  tests.ml
