(library
 (name projet_arbres_lib)
 (public_name projet_arbres.lib)
 (modules types remy_naive remy_lineaire metrics dot abr)
 ; fichiers .ml dans src
)

(executable
 (name main)
 (public_name projet_arbres)
 (libraries unix projet_arbres.lib)
 (modules main)
)

(executable
 (name experiments)
 (public_name projet_arbres.experiments)
 (libraries unix projet_arbres.lib)
 (modules experiments)
)
